CHANGES IN VERSION 1.3.11
------------------------
 o support phyloseq object <2016-01-21, Thu>
 o update geom_point2, geom_text2 and geom_segment2 to support setup_tree_data <2016-01-21, Thu>
 o implement geom_tree2 layer that support duplicated node records via the setup_tree_data function <2016-01-21, Thu>
 o rescale_tree function for rescaling branch length of tree object <2016-01-20, Wed>
 o upgrade set_branch_length, now branch can be rescaled using feature in extraInfo slot <2016-01-20, Wed>
 
CHANGES IN VERSION 1.3.10
------------------------
 o remove dependency of gridExtra by implementing multiplot function instead of using grid.arrange <2016-01-20, Wed>
 o remove dependency of colorspace <2016-01-20, Wed>
 o support phylip tree format and update vignette of phylip example <2016-01-15, Fri>

CHANGES IN VERSION 1.3.9
------------------------
 o optimize getYcoord <2016-01-14, Thu>
 o add 'multiPhylo' example in 'Tree Visualization' vignette <2016-01-13, Wed>
 o viewClade, scaleClade, collapse, expand, rotate, flip, get_taxa_name and scale_x_ggtree accepts input tree_view=NULL.
   these function will access the last plot if tree_view=NULL. <2016-01-13, Wed>
   + > ggtree(rtree(30)); viewClade(node=35) works. no need to pipe.
 
CHANGES IN VERSION 1.3.8
------------------------
 o add example of viewClade in 'Tree Manipulation' vignette <2016-01-13, Wed>
 o add viewClade function <2016-01-12, Tue>
 o support obkData object defined by OutbreakTools <2016-01-12, Tue>
 o update vignettes <2016-01-07, Thu>
 o 05 advance tree annotation vignette <2016-01-04, Mon>
 o export theme_inset <2016-01-04, Mon>
 o inset, nodebar, nodepie functions <2015-12-31, Thu>
 
CHANGES IN VERSION 1.3.7
------------------------
 o split the long vignette to several vignettes
   + 00 ggtree <2015-12-29, Tue>
   + 01 tree data import <2015-12-28, Mon>
   + 02 tree visualization <2015-12-28, Mon>
   + 03 tree manipulation <2015-12-28, Mon>
   + 04 tree annotation <2015-12-29, Tue>
 